--- a/Session12/Pages/LoginPage.xaml
+++ b/Session12/Pages/LoginPage.xaml
@@ -1,38 +1,24 @@
-﻿<Page x:Class="Session12.Pages.LoginPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
-      xmlns:local="clr-namespace:Session12.Pages"
-      mc:Ignorable="d" 
-      Title="LoginPage">
+﻿<Window x:Class="Session12.Pages.LoginPage"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
+        xmlns:local="clr-namespace:Session12.Pages"
+        mc:Ignorable="d" 
+        Height="340"
+        Width="300"
+        Title="Авторизация">
 
-    <Grid Style="{StaticResource ResourceKey=StyleGrid}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="Авторизация" FontSize="25" FontWeight="Bold"/>
-        </StackPanel>
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Логин" FontSize="18" FontWeight="DemiBold"/>
-            <TextBox Margin="10 0 0 0" x:Name="LoginBox" MinWidth="200"/>
-        </StackPanel>
-        <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Пароль" FontSize="18" FontWeight="DemiBold"/>
-            <PasswordBox Margin="10 0 0 0" x:Name="PasswordBox" MinWidth="200"/>
-        </StackPanel>
-        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="Enter" Content="Войти" Padding="6 4" Click="Enter_Click"/>
-            <Button Margin="20 0 0 0" x:Name="GoToRegistrationPage" Padding="6 4" Content="Зарегестриловаться"/>
-        </StackPanel>
-    </Grid>
-</Page>
+    <StackPanel Style="{StaticResource ResourceKey=StyleStackPanel}">
+        <TextBlock Text="Авторизация" Margin="0 0 0 20" FontSize="25" FontWeight="Bold"/>
+
+        <TextBlock Margin="0 10 0 0" Text="Логин"/>
+        <TextBox x:Name="LoginBox" BorderThickness="0 0 0 1" MinWidth="200"/>
+        <Separator/>
+        <TextBlock Margin="0 10 0 0" Text="Пароль"/>
+        <PasswordBox x:Name="PasswordBox" BorderThickness="0 0 0 1" MinWidth="200"/>
+        <Separator/>
+        <Button Margin="0 10 0 0" x:Name="Enter" Content="Войти" Padding="6 4" Click="Enter_Click"/>
+        <Button Margin="0 10 0 0" x:Name="GoToRegistrationPage" Padding="6 4" Content="Зарегестриловаться" Click="GoToRegistrationPage_Click"/>
+    </StackPanel>
+</Window>
