--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -2,16 +2,103 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Session12"
-             StartupUri="LogAndRegWindow/LoginPage.xaml">
+             StartupUri="MainWindow.xaml">
+             <!--StartupUri="LogAndRegWindow/LoginPage.xaml">-->
     <Application.Resources>
-        <Style x:Key="StyleStackPanel" TargetType="StackPanel">
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="TextBlock.Foreground" Value="#FF2B2B2B"/>
-            <Setter Property="TextBlock.TextAlignment" Value="Center"/>
-            <Setter Property="TextBlock.FontSize" Value="18"/>
-            <Setter Property="TextBlock.FontWeight" Value="DemiBold"/>
-            <Setter Property="TextBlock.FontFamily" Value="Bahnschrift SemiBold"/>
+        
+        <!--#region Общий стиль для основых StackPanel -->
+        <Style x:Key="StyleStackPanel"
+               TargetType="StackPanel">
+            <Setter
+                Property="HorizontalAlignment"
+                Value="Center"/>
+            <Setter
+                Property="VerticalAlignment"
+                Value="Center"/>
+            <Setter
+                Property="TextBlock.Foreground"
+                Value="#FF2B2B2B"/>
+            <Setter
+                Property="TextBlock.TextAlignment"
+                Value="Center"/>
+            <Setter
+                Property="TextBlock.FontSize"
+                Value="18"/>
+            <Setter 
+                Property="TextBlock.FontWeight"
+                Value="DemiBold"/>
+            <Setter 
+                Property="TextBlock.FontFamily"
+                Value="Bahnschrift SemiBold"/>
         </Style>
+        <!--#endregion-->
+
+        <!--#region Стиль для кнопок навигации в основном окне -->
+        <Style x:Key="MenuButton" 
+               TargetType="Button">
+            <Setter
+                Property="Background"
+                Value="Transparent"/>
+            <Setter
+                Property="Height"
+                Value="55" />
+            <Setter
+                Property="HorizontalAlignment"
+                Value="Left" />
+            <Setter
+                Property="Width"
+                Value="auto" />
+            <Setter
+                Property="Foreground"
+                Value="White" />
+            <Setter
+                Property="Margin"
+                Value="10,0,0,10" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid>
+                            <Border Name="MenuBorder"
+                                    SnapsToDevicePixels="True"
+                                    BorderBrush="Black"
+                                    Background="{TemplateBinding Background}"
+                                    BorderThickness="2,0,0,0" 
+                                    CornerRadius="0 12 12 0">
+                                <ContentPresenter
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger
+                                Property="Button.IsFocused"
+                                Value="True">
+                                <Setter
+                                    Property="Background"
+                                    Value="Transparent"/>
+                                <Setter
+                                    TargetName="MenuBorder"
+                                    Property="BorderBrush"
+                                    Value="#FFED6A2B" />
+                            </Trigger>
+                            <Trigger
+                                Property="Button.IsMouseOver"
+                                Value="True">
+                                <Setter
+                                    Property="Background"
+                                    Value="Transparent"/>
+                                <Setter
+                                    TargetName="MenuBorder"
+                                    Property="BorderBrush"
+                                    Value="#83CC16" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <!--#endregion-->
+        
     </Application.Resources>
 </Application>
