--- a/Session12/MainWindow.xaml
+++ b/Session12/MainWindow.xaml
@@ -17,36 +17,48 @@
             <ColumnDefinition Width="12*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="1">
-            <Button Style="{StaticResource MenuButton}">
+        <StackPanel
+            Grid.Column="0"
+            Grid.Row="1">
+            <Button 
+                Style="{StaticResource MenuButton}"
+                Click="OpenMainList">
                 <Button.Content>
                     <Image
                         Source="Recourse/icon_main.png"
                         Margin="5 0 0 0"/>
                 </Button.Content>
             </Button>   
-            <Button Style="{StaticResource MenuButton}">
+            <Button 
+                Style="{StaticResource MenuButton}"
+                Click="OpenProductList">
                 <Button.Content>
                     <Image
                         Source="Recourse/icon_product.png"
                         Margin="5 0 0 0"/>
                 </Button.Content>
             </Button>
-            <Button Style="{StaticResource MenuButton}">
+            <Button 
+                Style="{StaticResource MenuButton}"
+                Click="OpenPostavchikList">
                 <Button.Content>
                     <Image
                         Source="Recourse/icon_postavchik.png"
                         Margin="5 0 0 0"/>
                 </Button.Content>
             </Button>
-            <Button Style="{StaticResource MenuButton}">
+            <Button 
+                Style="{StaticResource MenuButton}"
+                Click="OpenOrdersList">
                 <Button.Content>
                     <Image
                         Source="Recourse/icon_orders.png"
                         Margin="5 0 0 0"/>
                 </Button.Content>
             </Button>
-            <Button Style="{StaticResource MenuButton}">
+            <Button 
+                Style="{StaticResource MenuButton}"
+                Click="OpenGoinYourHouseList">
                 <Button.Content>
                     <Image
                         Source="Recourse/icon_goinyourhouse.png"
@@ -66,6 +78,7 @@
 
         <Frame
             x:Name="MainFrame"
+            NavigationUIVisibility="Hidden"
             Grid.Column="1"
             Margin="5"
             Grid.Row="1"/>
