не доделал счетчик

--- a/Session12/Pages/ProductsListPage.xaml
+++ b/Session12/Pages/ProductsListPage.xaml
@@ -59,7 +59,7 @@
 
         <ListView
             ItemsSource="{Binding Products}"
-            d:ItemsSource="{d:SampleData ItemCount=10}"
+            d:ItemsSource="{d:SampleData ItemCount=2}"
             BorderBrush="Black">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
@@ -154,5 +154,21 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+
+        <TextBlock Text="{Binding Path=NumberPages}"/>
+
+        <StackPanel
+            Orientation="Horizontal"
+            HorizontalAlignment="Right">
+            <Button Content="&lt;"/>
+            <ListBox>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Button />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Content="&gt;"/>
+        </StackPanel>
     </StackPanel>
 </Page>
