--- a/Session12/App.xaml
+++ b/Session12/App.xaml
@@ -56,7 +56,7 @@
 
         <!--#region Стиль для кнопок навигации в основном окне -->
         <Style x:Key="MenuButton" 
-               TargetType="Button">
+               TargetType="RadioButton">
             <Setter
                 Property="Background"
                 Value="Transparent"/>
@@ -78,7 +78,7 @@
 
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
+                    <ControlTemplate TargetType="{x:Type RadioButton}">
                         <Grid>
                             <Border Name="MenuBorder"
                                     SnapsToDevicePixels="True"
@@ -93,7 +93,7 @@
                         </Grid>
                         <ControlTemplate.Triggers>
                             <Trigger
-                                Property="Button.IsFocused"
+                                Property="RadioButton.IsChecked"
                                 Value="True">
                                 <Setter
                                     Property="Background"
@@ -104,7 +104,7 @@
                                     Value="#FFED6A2B" />
                             </Trigger>
                             <Trigger
-                                Property="Button.IsMouseOver"
+                                Property="RadioButton.IsMouseOver"
                                 Value="True">
                                 <Setter
                                     Property="Background"
@@ -112,7 +112,7 @@
                                 <Setter
                                     TargetName="MenuBorder"
                                     Property="BorderBrush"
-                                    Value="#83CC16" />
+                                    Value="#1ACC13" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -130,14 +130,14 @@
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger
-                                        Property="IsMouseOver"
-                                        Value="True">
+                                Property="IsMouseOver"
+                                Value="True">
                                 <Setter
-                                            Property="Background"
-                                            Value="Aqua"/>
+                                    Property="Background"
+                                    Value="Aqua"/>
                                 <Setter
-                                            Property="BorderBrush"
-                                            Value="#83CC16" />
+                                    Property="BorderBrush"
+                                    Value="#83CC16" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -145,5 +145,28 @@
             </Setter>
         </Style>
 
+        <!--#region Стили Stackpanel в личном кабинете-->
+        <Style TargetType="StackPanel" x:Key="PersenCabinetStackpanel">
+            <Setter
+                Property="TextBox.Foreground"
+                Value="#FF2B2B2B"/>
+            <Setter
+                Property="TextBox.FontSize"
+                Value="15"/>
+            <Setter
+                Property="TextBlock.FontSize"
+                Value="18"/>
+            <Setter 
+                Property="TextBox.FontWeight"
+                Value="DemiBold"/>
+            <Setter 
+                Property="TextBox.FontFamily"
+                Value="Bahnschrift SemiBold"/>
+            <Setter 
+                Property="TextBox.Margin"
+                Value="0 0 0 15"/>
+        </Style>
+        <!--#endregion-->
+        
     </Application.Resources>
 </Application>
